--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,21 @@ body{
     color: white;
     overflow: hidden;
 }
+
+.videos{
+ 
+    width: 100%;
+    display: grid;
+    overflow: auto;
+    padding: 20px;
+    gap: 50px;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+}
+.videos::-webkit-scrollbar{
+  width: 8px;  
+  border-radius: 5px;
+  background: transparent;
+}
+.videos::-webkit-scrollbar-thumb{
+    background: #818080;
+}
