--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 body{
     background-color: black;
     color: white;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .videos{
@@ -25,4 +25,32 @@ body{
 }
 .videos::-webkit-scrollbar-thumb{
     background: #818080;
+}
+
+/* detay sayfası */
+
+.detail-page{
+    display: grid;
+    gap: 40px;
+    grid-template-columns: auto 400px;
+    padding: 40px 60px;
+}
+@media(min-width:1400px){
+    .detail-page{
+        padding: 40px 100px;
+    }
+}
+
+@media (max-width:1000px){
+    .detail-page{
+        grid-template-columns: 1fr;
+        padding: 40px 20px;
+    }
+}
+
+.row{
+    display: grid;
+    grid-template-columns:140px auto;
+    align-items: center;
+    gap: 20px;
 }
